﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ New PColor32 struct
+ ColorExtensions class:
  + New GetBrightness overload
* ColorSpaceHelper class:
  + Adding new ToFloat overload from UInt16
  + Adding new ToUInt16 method
  + Adding new SrgbToLinear overload from UInt16
  + Adding new LinearToSrgb16Bit method
  - Fixing float-float version of LinearToSrgb for some out-of-bounds values
* Palette class:
  * Grayscale256 method: improving grayscale mapping when working in the linear color space
  + Grayscale16/Grayscale4 methods: special linear color space handling even if directMapping is true
* BitmapDataFactory class:
  * Improving grayscale conversion for the known grayscale pixel format when working in the linear color space


~~~~~~~~~
! v7.1.0:
~~~~~~~~~

! KGySoft.Drawing.Imaging namespace
===================================
! IBitmapData interface:
  ! New WorkingColorSpace property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1
    where this property has a default implementation and returns WorkingColorSpace.Default.
! IQuantizingSession interface:
  ! New WorkingColorSpace property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard
    2.1 where this property has a default implementation and returns WorkingColorSpace.Default.
! Palette class:
  ! The constructors with Func<Color32, int> parameters are now obsolete. These overloads have no default parameters
    anymore so if you didn't use the old customGetNearestColorIndex parameter, then automatically the new overloads
    are called if you recompile your code.
  + New constructor overloads with IEnumerable<Color32> parameter instead of an array.
  + New constructor and factory method overloads with workingColorSpace parameters.